[gd_scene load_steps=10 format=2]

[ext_resource path="res://UI/TitleScreen/buttons/PlayAgainButton.tscn" type="PackedScene" id=1]
[ext_resource path="res://UI/TitleScreen/buttons/QuitButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://UI/TitleScreen/Black.png" type="Texture" id=3]
[ext_resource path="res://UI/TitleScreen/pixeboy-font/Pixeboy-z8XGD.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://UI/TitleScreen/DeathScreen.gd" type="Script" id=5]
[ext_resource path="res://UI/TitleScreen/buttons/LeaderBoardButton.tscn" type="PackedScene" id=6]

[sub_resource type="Animation" id=1]
resource_name = "New Anim"
length = 5.0
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:modulate:a")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0.5, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 5 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("../Menu/Label:modulate:a")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 2 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("../Menu/CenterRow/Buttons/PlayAgainButton:modulate:a")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 2 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("../Menu/CenterRow/Buttons/QuitButton:modulate:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 2 )
}
tracks/4/type = "bezier"
tracks/4/path = NodePath("../Menu/CenterRow/Buttons/LeaderBoard:modulate:a")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 2 )
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:modulate:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath(".:modulate:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath(".:modulate:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath(".:modulate:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}

[sub_resource type="DynamicFont" id=2]
size = 48
font_data = ExtResource( 4 )

[node name="DeathScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 3 )
expand = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="TextureRect"]
method_call_mode = 1
"anims/New Anim" = SubResource( 1 )
anims/RESET = SubResource( 3 )

[node name="Menu" type="VBoxContainer" parent="."]
margin_left = 20.0
margin_top = 20.0
margin_right = 300.0
margin_bottom = 160.0

[node name="Label" type="Label" parent="Menu"]
margin_right = 280.0
margin_bottom = 28.0
custom_colors/font_color_shadow = Color( 0.380392, 0.137255, 0.137255, 1 )
custom_constants/shadow_offset_x = 4
custom_constants/shadow_offset_y = 4
custom_constants/shadow_as_outline = 1
custom_fonts/font = SubResource( 2 )
text = "You Died!!!"
align = 1

[node name="CenterRow" type="HBoxContainer" parent="Menu"]
margin_top = 32.0
margin_right = 280.0
margin_bottom = 140.0
size_flags_vertical = 3

[node name="Buttons" type="VBoxContainer" parent="Menu/CenterRow"]
margin_right = 280.0
margin_bottom = 108.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 15
alignment = 1

[node name="PlayAgainButton" parent="Menu/CenterRow/Buttons" instance=ExtResource( 1 )]
margin_top = 9.0
margin_bottom = 29.0

[node name="LeaderBoard" parent="Menu/CenterRow/Buttons" instance=ExtResource( 6 )]
margin_top = 44.0
margin_bottom = 64.0
size_flags_vertical = 0

[node name="QuitButton" parent="Menu/CenterRow/Buttons" instance=ExtResource( 2 )]
margin_top = 79.0
margin_bottom = 99.0

[connection signal="pressed" from="Menu/CenterRow/Buttons/PlayAgainButton" to="." method="_on_PlayAgainButton_pressed"]
[connection signal="pressed" from="Menu/CenterRow/Buttons/LeaderBoard" to="." method="_on_LeaderBoard_pressed"]
[connection signal="pressed" from="Menu/CenterRow/Buttons/QuitButton" to="." method="_on_QuitButton_pressed"]
